2003-08-14  Bruno Haible  <bruno@clisp.org>

	* config.charset: Add support for Linux libc5. Based on data from
	Alain Guibert <derogaton+bgli@oreka.com>.

2003-08-01  Bruno Haible  <bruno@clisp.org>

	* relocatable.c (find_shared_library_fullname): Disable the code on
	Linux/libc5. Reported by Alain Guibert <derogaton+bgli@oreka.com>.

2003-07-09  Paul Eggert  <eggert@twinsun.com>

	* alloca_.h: Switch from LGPL to GPL.

2003-07-01  Bruno Haible  <bruno@clisp.org>

	* readlink.c: New file, from gnulib.
	* Makefile.am (LIBADD_SOURCE): Add it.

2003-07-01  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (EXTRA_DIST, stdbool.h): Use stdbool_.h instead of
	stdbool.h.in.

2003-05-28  Paul Eggert  <eggert@twinsun.com>

	* pathmax.h: Include <limits.h> without checking for HAVE_LIMITS_H.
	* addext.c: Likewise.
	* backupfile.c: Likewise.
	* xreadlink.c: Likewise.

2003-06-23  Bruno Haible  <bruno@clisp.org>

	Avoid compilation units that are empty after preprocessing.
	* canonicalize.c: Add dummy declaration.
	* strerror.c: Likewise.
	* strtoul.c: Likewise.
	* error.c: Include <stdio.h> even if there's nothing to be compiled.

2003-06-22  Bruno Haible  <bruno@clisp.org>

	Portability to mingw32.
	* relocatable.c [WIN32]: Include <windows.h>.
	Reported by Jeff Bonggren <jbon@cfl.rr.com>.

2003-06-22  Bruno Haible  <bruno@clisp.org>

	* relocatable.c (compute_curr_prefix): Comment out this function in
	the case when it is not used.
	Reported by Pavel Roskin <proski@gnu.org>.

2003-06-13  Bruno Haible  <bruno@clisp.org>

	* wait-process.h (wait_subprocess): Add null_stderr argument.
	* wait-process.c (wait_subprocess): Add null_stderr argument.
	When !exit_on_error && !null_stderr, still emit error messages, but
	don't exit.
	* execute.c (execute): When !exit_on_error && !null_stderr, still
	emit error messages, but don't exit. Update wait_subprocess call.
	* pipe-in.c (create_pipe_in): When !exit_on_error && !null_stderr,
	still emit error messages, but don't exit.